src/test/ui/async-await/dont-suggest-missing-await.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/dont-suggest-missing-await.rs:14:9
   |
LL |         take_u32(x)
   |         ^^^^^^^^^-^
   |                  |
   |                  expected `u32`, found `impl Future`
   |
note: function defined here
  --> $DIR/dont-suggest-missing-await.rs:5:4
   |
LL | fn take_u32(x: u32) {}
   |    ^^^^^^^^ ------
help: provide an argument of the correct type
   |
LL |         take_u32({u32})
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
